깃 클론하기

--- a/깃허브협업.md
+++ b/깃허브협업.md
@@ -190,3 +190,11 @@ git merge --no-ff dev (main브랜치가 dev브랜치 기록을 가져옴)
  tag만들기
 git tag log1.0.0
 git push --tags origin main
+
+### 깃 가져올때
+
+-- git init
+-- git pull origin (main) 또는 git pull origin -> pull하지 않으면 가져올수 없다  
+-- git add .
+-- 깃 커밋 git commit -m
+-- git checkout -b 새로운브랜치
