--- a/깃허브협업.md
+++ b/깃허브협업.md
@@ -198,3 +198,12 @@ git push --tags origin main
 -- git add .
 -- 깃 커밋 git commit -m
 -- git checkout -b 새로운브랜치
+
+### 가져오는방법(폴더 클론가정) 깃id/프로젝트명
+
+-- cd 프로젝트명
+-- git pull (반드시 이거하기)
+-- git checkout (새로운브랜치)
+-- 작업문서(반드시 저장하기) -> git add . -> git commit -m "문자"
+-- git stauts (상태 확인 tracked, commite되었는지 , modified)
+-- git push
